- Fix wxPopupTransientWindow mouse events with GTK3,
  also fixes wxOwnerDrawnComboBox, wxDatePickerCtrl.
- Fix cursor inheritance.
- Fix wxStaticBoxSizer size calculation

wxMSW:

- Disable the use of compiler TLS to avoid mysterious crashes in plugins.
- Fix blank wxBitmapComboBox dropdown appearance.
- Fix clicking on checkboxes in wxDataViewCtrl.
- Make "%lu" work with size_t arguments under Win64 (laro).
- Fix wxRegion::Offset() with shared objects (Joost Nieuwenhuijse).
- Fix wxSocket::Initialize() after Shutdown() (Laurent Poujoulat).
- Fix coordinates of EVT_MOUSEWHEEL in frames with toolbars (LtJax).
- Support "show" verb as well as "open" in wxFileType (Eric Jensen).
- Fix display of bitmaps with alpha in wxStaticBitmap (Artur Wieczorek).
- Fix wxClientDC::Clear() for scrolled windows (Artur Wieczorek).
- Make wxPrinterDC::DrawIcon() actually work (Artur Wieczorek).
- Fix handling of wxSET, wxCLEAR and wxINVERT in wxDC (Artur Wieczorek).
- Fix bug with multiple default buttons in a dialog (Artur Wieczorek).
- Improve tooltips wrapping after updating their text (Artur Wieczorek).

wxOSX:

- Fix incorrect joystick detection in configure (Lauri Nurmi).


3.0.0: (released 2013-11-11)
----------------------------

All:

- Fix crash if wxCharBuffer fails to allocate the requested amount of memory.

wxGTK:

- Fix wxSpinButton default width under GTK+ 3 (David Hart).

wxMSW:

- Compilation fix for WXWIN_COMPATIBILITY_2_6=1 case (Tim Stahlhut).
- Fix behaviour of wxComboBox using ID=1000.


3.0-RC2: (released 2013-10-28)
------------------------------

All:

- wxTextFile::SaveFile() uses UTF-8 now.
- Add possibility to validate the input files against a schema to wxrc.
- Fix recently broken compilation with Intel compiler.
- Fix reading of files with Mac EOLs in wxTextFile.

All (GUI):

- Fix wxListEvent::GetData() in LLP64 builds.
- Fix special characters handling in wxSVGFileDC::DrawText() (Ludovic Aubert).

wxGTK:

- Fix DrawArc() when printing.

wxMSW:
