@@ -613,6 +613,7 @@ wxMSW:
 - Disable the use of compiler TLS to avoid mysterious crashes in plugins.
 - Fix blank wxBitmapComboBox dropdown appearance.
 - Fix clicking on checkboxes in wxDataViewCtrl.
+- Many improvements to alpha transparency handling (Artur Wieczorek).
 - Make "%lu" work with size_t arguments under Win64 (laro).
 - Fix wxRegion::Offset() with shared objects (Joost Nieuwenhuijse).
 - Fix wxSocket::Initialize() after Shutdown() (Laurent Poujoulat).
